--- a/css/login.css
+++ b/css/login.css
@@ -22,6 +22,7 @@ body {
     box-sizing: border-box;
     height: auto;
     padding: 0.5em;
+    margin-top: 1em;
     font-size: 1em;
 }
 .form-signin .form-control:focus {
