--- a/css/style.css
+++ b/css/style.css
@@ -1,48 +1,45 @@
 body {
+    -ms-flex-align: center;
+    -ms-flex-pack: center;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    justify-content: center;
     background-color: #f5f5f5;
-    font-size: 16px;
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-}
-
-h1 {
-    margin-bottom: 0.5em;
-}
-
-.login_form, form {
-    margin-top: 1em;
-}
-
-input {
-    position: relative;
-    margin-left: 0.5em;
-    display: inline-block;
-}
-
-.button, p {
-    margin-top: 1em;
-}
-
-.action_buttons {
-    margin-top: 1em;
-}
-
-.form, .error {
-    margin-left: 2em;
 }
 
 img {
     vertical-align: middle;
     margin-bottom: 1.5rem!important;
     display: block;
-    position: center;
-    margin-left: 45%;
+    margin-left: auto;
+    margin-right: 48%;
 }
 
 .quote {
     font-family: Georgia, "Times New Roman", Times, serif;
-    font-size:24px;
-    margin-top: 5px; margin-bottom: 0px;
+    font-size: 24px;
+    margin-top: 5px;
+    margin-bottom: 0px;
     text-align: center;
     font-weight: normal;
     color: #222;
+}
+
+.addItem {
+    display: -ms-flexbox;
+    display: -webkit-box;
+    display: flex;
+    width: 100%;
+    max-width: 38em;
+    margin: 1em auto;
+    position: relative;
+    box-sizing: border-box;
+    height: auto;
+    padding: 0.5em;
+    font-size: 1em;
+}
+
+#add, #cancel{
+    margin-top: 1em;
 }
